--- a/css/colors.css
+++ b/css/colors.css
@@ -1,2 +1,4 @@
-$blue: #056ef0;
-$pink: lightblue;
+$backgroundPageColor: #4a90e2;
+$backgroundFormColor: #ffffff;
+$headingColor: #0c2543;
+$formTextColor: #4a4a4a;
