--- a/css/base.css
+++ b/css/base.css
@@ -11,7 +11,7 @@ html {
 body {
     background-color: $backgroundPageColor;
     height: 100%;
-    font: $fontWeightBase $font-18 "HelveticaNeue", $mainFont, sans-serif;
+    font: $fontWeightBase $font-18 "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", Helvetica, $mainFont, sans-serif;
     color: $formTextColor;
 }
 .container {
