--- a/src/components/CardNumberInput/CardNumberInput.component.css
+++ b/src/components/CardNumberInput/CardNumberInput.component.css
@@ -11,7 +11,10 @@
     display: block;
     font-weight: $fontWeightBase;
 }
-
+.labelInvalid {
+    color: rgba(234, 9, 51, 0.75);
+    font-weight: 600;
+}
 .input {
     width: 100%;
     height: 52px;
@@ -20,7 +23,10 @@
     padding: 0 10px;
     border: 1px solid $borderColor;
 }
-
+.invalid {
+    background-color: rgba(222, 188, 194, 0.21);
+    border-color: rgba(234, 9, 51, 0.75);
+}
 .text{
   width: 45%;
 }
