--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -1,5 +1,6 @@
 $backgroundPageColor: #4a90e2;
 $backgroundFormColor: #ffffff;
+$backgroundCardListColor:rgba(194, 222, 255, 0.34);
 $headingColor: #0c2543;
 $borderColor:rgba(12,37,67,0.21);
 $formTextColor: #4a4a4a;
